--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "gatsby": "^2.18.8",
+    "gatsby-plugin-sharp": "^2.3.7",
     "gatsby-plugin-theme-ui": "^0.2.43",
+    "gatsby-remark-images": "^3.1.38",
     "gatsby-theme-blog": "^1.2.7",
+    "gatsby-transformer-remark": "^2.6.42",
+    "gatsby-transformer-sharp": "^2.3.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
