--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gatsby": "^2.18.8",
+    "gatsby-plugin-google-analytics": "^2.1.34",
     "gatsby-plugin-sharp": "^2.3.7",
     "gatsby-plugin-theme-ui": "^0.2.43",
     "gatsby-remark-images": "^3.1.38",
