--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby": "^2.20.3",
     "gatsby-plugin-favicons": "^2.0.0",
     "gatsby-plugin-google-analytics": "^2.2.1",
+    "gatsby-plugin-google-gtag": "^5.11.0",
     "gatsby-plugin-manifest": "^3.9.0",
     "gatsby-plugin-offline": "^4.9.0",
     "gatsby-plugin-sharp": "^2.5.2",
