--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "gatsby": "^2.20.3",
     "gatsby-plugin-favicons": "^2.0.0",
     "gatsby-plugin-google-analytics": "^2.2.1",
-    "gatsby-plugin-google-gtag": "^5.11.0",
+    "gatsby-plugin-google-gtag": "^4.5.0",
     "gatsby-plugin-manifest": "^3.9.0",
     "gatsby-plugin-offline": "^4.9.0",
     "gatsby-plugin-sharp": "^2.5.2",
-    "gatsby-plugin-sitemap": "^4.5.0",
+    "gatsby-plugin-sitemap": "4.6.0",
     "gatsby-plugin-theme-ui": "^0.2.43",
     "gatsby-remark-images": "^3.2.1",
     "gatsby-theme-blog": "^1.4.3",
