--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "gatsby-plugin-google-analytics": "^2.2.1",
     "gatsby-plugin-google-gtag": "^4.5.0",
     "gatsby-plugin-manifest": "^3.9.0",
-    "gatsby-plugin-offline": "^4.9.0",
+    "gatsby-plugin-offline": "^6.12.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sharp": "^2.5.2",
     "gatsby-plugin-sitemap": "4.6.0",
     "gatsby-plugin-theme-ui": "^0.2.43",
