--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@gatsbyjs/reach-router": "^2.0.1",
     "gatsby": "^2.20.3",
     "gatsby-plugin-favicons": "^2.0.0",
     "gatsby-plugin-google-analytics": "^2.2.1",
